...

  @override
  _ChannelDashboardPageState createState() => _ChannelDashboardPageState();
}

class _ChannelDashboardPageState extends State<ChannelDashboardPage> {
  Map<String, dynamic>? _dashboardData;
  bool _isLoading = true;

  @override
  void initState() {
    super.initState();
    _fetchDashboardData();
...
        scaffoldMessenger.showSnackBar(
          SnackBar(content: Text(response['message'])),
        );
        _fetchDashboardData(); // Refresh the data after performing an action
      } else {
        scaffoldMessenger.showSnackBar(
          SnackBar(content: Text('Error: ${response['message']}')),
        );
      }
    } catch (e) {
      print('Error performing admin action: $e');
      if (!mounted) return;

...
